[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/ui/menu/layouts/empty_layout.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/ui/menu/elements/ListButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/ui/menu/elements/Separator.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ui/menu/layouts/layout_pause.gd" type="Script" id=4]
[ext_resource path="res://assets/res/bold_font_32.tres" type="DynamicFont" id=5]

[node name="LayoutContainer" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Label" type="Label" parent="." index="0"]
margin_right = 640.0
margin_bottom = 33.0
custom_fonts/font = ExtResource( 5 )
text = "PAUSE"
align = 1
valign = 1

[node name="TopPlaceHolder" parent="." index="1"]
margin_top = 33.0
margin_bottom = 236.0

[node name="ListButton" parent="." index="2" instance=ExtResource( 2 )]
margin_top = 236.0
margin_bottom = 276.0

[node name="Left" parent="ListButton/HBoxContainer" index="0"]
text = "  BACK TO GAME"

[node name="Seperator" parent="." index="3" instance=ExtResource( 3 )]
margin_top = 276.0
margin_bottom = 284.0

[node name="ListButton2" parent="." index="4" instance=ExtResource( 2 )]
margin_top = 284.0
margin_bottom = 324.0

[node name="Left" parent="ListButton2/HBoxContainer" index="0"]
text = "  OPTIONS"

[node name="Seperator2" parent="." index="5" instance=ExtResource( 3 )]
margin_top = 324.0
margin_bottom = 332.0

[node name="ListButton3" parent="." index="6" instance=ExtResource( 2 )]
margin_top = 332.0
margin_bottom = 372.0

[node name="Left" parent="ListButton3/HBoxContainer" index="0"]
text = "  MAIN MENU"

[node name="BottomPlaceHolder" parent="." index="7"]
margin_top = 372.0

[editable path="ListButton"]
[editable path="ListButton2"]
[editable path="ListButton3"]
